[package]
name = "panther"
version = "0.0.2"
edition = "2021"
license = "GPLv3 or later"
license-file = "LICENSE"
[dependencies]
colored = "3.0.0"
reqwest = "0.12.15"
serde = {version = "1.0.219", features = ["std", "derive"]}
serde_json = "1.0.140" 
tokio = {version = "1.44.1", features = ["full"]}
